--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^6.0.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
